--- a/kubernetes/superset/resources/external-secret.yaml
+++ b/kubernetes/superset/resources/external-secret.yaml
@@ -35,3 +35,22 @@ spec:
   dataFrom:
   - extract:
       key: superset-env
+
+---
+
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: superset-postgres-db
+  namespace: superset
+spec:
+  refreshPolicy: CreatedOnce
+  secretStoreRef:
+    name: main
+    kind: ClusterSecretStore
+  target:
+    name: superset-postgres-db
+    creationPolicy: Owner
+  dataFrom:
+  - extract:
+      key: superset-postgres-db
