--- a/kubernetes/superset/prod/values.yaml
+++ b/kubernetes/superset/prod/values.yaml
@@ -1,3 +1,4 @@
+# genk8s:hash=176d2a6c3addb1da69c9a2bfe811ec9a
 # +argocd:skip-file-rendering
 postgresql:
   enabled: false
@@ -16,7 +17,7 @@ redis:
 # Custom Superset image which contains their upstream release plus pip packages
 # for MySQL and PostgreSQL drivers.
 image:
-  repository: ${image_repository_uri}/apache-superset
+  repository: northamerica-northeast2-docker.pkg.dev/gpo-eng-prod/gpo/apache-superset
   tag: v0.0.1
 # Enabling feature flags. Note this is Python code injected into config.py.
 # See https://github.com/apache/superset/blob/master/RESOURCES/FEATURE_FLAGS.md
