--- a/kubernetes/superset/resources/pg.yaml
+++ b/kubernetes/superset/resources/pg.yaml
@@ -2,6 +2,7 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: superset
+  namespace: superset
 spec:
   instances: 1
   storage:
