--- a/kubernetes/gateway/stage/gateway.yaml
+++ b/kubernetes/gateway/stage/gateway.yaml
@@ -1,7 +1,9 @@
+# genk8s:hash=0231ce43b6d29be2a10c2a2a78cc3905
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: gpotools
+  namespace: gateway
 spec:
   # this gatewayClass is the incantation for the current gen ALB (not classic)
   # https://docs.cloud.google.com/load-balancing/docs/https#load-balancer-mode
@@ -10,60 +12,23 @@ spec:
   - name: http
     protocol: HTTP
     port: 80
+    hostname: "*.gpotoolsstage.ca"
     allowedRoutes:
       namespaces:
         from: All
       kinds:
       - kind: HTTPRoute
-  - name: grassroots
-    hostname: grassroots.gpotoolsstage.ca
+  - name: tls
+    hostname: "*.gpotoolsstage.ca"
     protocol: HTTPS
     port: 443
     tls:
       mode: Terminate
       certificateRefs:
-      - name: grassroots
-    # only allow httproutes in the grassroots namespace to use this listener
+      - name: wildcard-gpotools
     allowedRoutes:
       namespaces:
-        from: Selector
-        selector:
-          matchLabels:
-            kubernetes.io/metadata.name: grassroots
-      kinds:
-      - kind: HTTPRoute
-  - name: superset
-    hostname: superset.gpotoolsstage.ca
-    protocol: HTTPS
-    port: 443
-    tls:
-      mode: Terminate
-      certificateRefs:
-      - name: superset
-    # only allow httproutes in the superset namespace to use this listener
-    allowedRoutes:
-      namespaces:
-        from: Selector
-        selector:
-          matchLabels:
-            kubernetes.io/metadata.name: superset
-      kinds:
-      - kind: HTTPRoute
-  - name: argocd
-    hostname: argocd.gpotoolsstage.ca
-    protocol: HTTPS
-    port: 443
-    tls:
-      mode: Terminate
-      certificateRefs:
-      - name: argocd
-    # only allow httproutes in the argocd namespace to use this listener
-    allowedRoutes:
-      namespaces:
-        from: Selector
-        selector:
-          matchLabels:
-            kubernetes.io/metadata.name: argocd
+        from: All
       kinds:
       - kind: HTTPRoute
   addresses:
