move argocd to wildcard listener

--- a/kubernetes/argocd/stage/rendered/argocd.yaml
+++ b/kubernetes/argocd/stage/rendered/argocd.yaml
@@ -25984,7 +25984,7 @@ spec:
       kind: Gateway
       name: gpotools
       namespace: gateway
-      sectionName: argocd
+      sectionName: tls
   rules:
     - matches:
         - path:
