add hostname to httproute

--- a/kubernetes/argocd/stage/rendered/argocd.yaml
+++ b/kubernetes/argocd/stage/rendered/argocd.yaml
@@ -25985,6 +25985,8 @@ spec:
       name: gpotools
       namespace: gateway
       sectionName: tls
+  hostnames:
+    - argocd.gpotoolsstage.ca
   rules:
     - matches:
         - path:
