--- a/kubernetes/argocd-apps/stage/application.yaml
+++ b/kubernetes/argocd-apps/stage/application.yaml
@@ -1,4 +1,4 @@
-# genk8s:hash=5d7cf93a42498dbb7daa46e3176057fe
+# genk8s:hash=b27876f46b7d16bfd6ccee434a1688c4
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -54,7 +54,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: argocd
+    namespace: cnpg
     server: https://kubernetes.default.svc
   project: default
   source:
@@ -92,34 +92,6 @@ spec:
     repoURL: https://github.com/gpo/gpo-platform-configs
     targetRevision: HEAD
   syncPolicy:
-    automated:
-      enabled: true
-      prune: true
-
----
-
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: external-secrets
-  namespace: argocd
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
-spec:
-  destination:
-    namespace: external-secrets
-    server: https://kubernetes.default.svc
-  project: default
-  sources:
-  - path: kubernetes/external-secrets/stage/rendered
-    repoURL: https://github.com/gpo/gpo-platform-configs
-    targetRevision: HEAD
-  - path: kubernetes/external-secrets/stage
-    repoURL: https://github.com/gpo/gpo-platform-configs
-    targetRevision: HEAD
-  syncPolicy:
-    syncOptions:
-    - ServerSideApply=true
     automated:
       enabled: true
       prune: true
