--- a/.mise.toml
+++ b/.mise.toml
@@ -6,6 +6,7 @@ jq = '1.8.1'
 argocd = '3.2.1'
 helmfile = '1.2.2'
 yq = 'v4.50.1'
+vals = '0.43.0'
 
 [tasks.pc]
 description = "Run all git pre-commit hooks."
